fixed image being too high outside of aspect ratio groups

--- a/_scss/_base.scss
+++ b/_scss/_base.scss
@@ -25,7 +25,6 @@ $link-translate-right: translateX(12px);
 
 img {
   width: 100%;
-  height: 100%;
   object-fit: cover;
 }
 
