--- a/_scss/_index.scss
+++ b/_scss/_index.scss
@@ -427,6 +427,9 @@ footer p {
     right: 0;
     bottom: 0;
     left: 0;
+    img {
+    height: 100%;
+    }
   }
 }
 
